--- a/dotnet/DotNetAPI_SQLSeed/appsettings.json
+++ b/dotnet/DotNetAPI_SQLSeed/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=PortfolioProjectDatabase;Trusted_Connection=true;TrustServerCertificate=true;"
+        "DefaultConnection": "Server=tcp:meester-portfolio-project-server.database.windows.net,1433;Initial Catalog=MeesterPortfolioProjectDatabase1;Persist Security Info=False;User ID=azadmin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
 }
 
